# blehidproxy

./: CMakeLists.txt  Kconfig  Readme.md  prj.conf
include/bthidproxy/: ble.h  hid.h  usb.h
src/: ble.c  hid.c  main.c  usb.c
