cmake_minimum_required(VERSION 3.20.0)
find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(bthidproxy)

target_include_directories(app PRIVATE include)

target_sources(app PRIVATE src/usb.c)
target_sources(app PRIVATE src/hid.c)
target_sources(app PRIVATE src/ble.c)
target_sources(app PRIVATE src/main.c)
